--- a/Assignment#1/index.html
+++ b/Assignment#1/index.html
@@ -11,8 +11,8 @@
     <div class="form__container">
       <h1>Sign Up</h1>
       <form class="form">
-        <input type="text" name="fname" placeholder="First Name" />
-        <input type="text" name="lname" placeholder="Last Name" />
+        <input  class="grid__mfull" type="text" name="fname" placeholder="First Name" />
+        <input  class="grid__mfull" type="text" name="lname" placeholder="Last Name" />
         <input
           class="grid__full"
           type="tel"
@@ -25,8 +25,8 @@
           name="email"
           placeholder="Email Address"
         />
-        <input type="password" name="password" placeholder="Password" />
-        <input
+        <input  class="grid__mfull" type="password" name="password" placeholder="Password" />
+        <input class="grid__mfull" 
           type="password"
           name="cpassword"
           placeholder="Confirm Password"
